--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@pinia/nuxt": "^0.5.1",
     "@types/qs": "^6.9.11",
     "dayjs": "^1.11.10",
-    "qs": "^6.11.2"
+    "qs": "^6.11.2",
+    "v-calendar": "^3.1.2"
   }
 }
