--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-API_URL=https://localhost:8000
+NUXT_API_PARTY_ENDPOINTS_LOCAL_API_URL=https://localhost:8000
 # Random 32char password for the session
 NUXT_SESSION_PASSWORD=
 # Dev only
