--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "sass": "^1.72.0",
     "vue": "^3.4.21",
     "vue-chartjs": "^5.3.0",
+    "vue-qrcode-reader": "^5.5.6",
     "vue-router": "^4.3.0"
   },
   "dependencies": {
