Add cloudflare turnstile config

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,10 @@
-NUXT_API_PARTY_ENDPOINTS_LOCAL_API_URL=https://localhost:8000
+NUXT_API_PARTY_ENDPOINTS_LOCAL_API_URL=https://localhost
 # Random 32char password for the session
 NUXT_SESSION_PASSWORD=
 # Dev only
 NODE_TLS_REJECT_UNAUTHORIZED=0
+
+# OPTIONAL: Cloudflare turnstile captcha
+#NUXT_PUBLIC_CLIENT_TURNSTILE=true
+#NUXT_PUBLIC_TURNSTILE_SITE_KEY=''
+#NUXT_TURNSTILE_SECRET_KEY=''
