--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "nuxt": "^3.13.2",
     "nuxt-api-party": "^1.1.1",
     "sass": "^1.72.0",
+    "uuid-encoder": "^1.2.0",
     "vue": "^3.4.31",
     "vue-chartjs": "^5.3.1",
     "vue-qrcode-reader": "^5.5.6",
