--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@types/qs": "^6.9.18",
     "dayjs": "^1.11.13",
     "pinia": "^2.3.1",
+    "pinia-plugin-persistedstate": "^4.2.0",
     "qs": "^6.14.0",
     "v-calendar": "^3.1.2"
   },
