Switch for oauth login method

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,6 @@ NUXT_API_PARTY_ENDPOINTS_LOCAL_API_URL=https://localhost:8000
 NUXT_SESSION_PASSWORD=
 # Dev only
 NODE_TLS_REJECT_UNAUTHORIZED=0
+
+# The api client auth must be in base64 : <cliend_id>:<client_secret>
+CLIENT_AUTH=
