Update oauth api login

--- a/.env.example
+++ b/.env.example
@@ -4,5 +4,6 @@ NUXT_SESSION_PASSWORD=
 # Dev only
 NODE_TLS_REJECT_UNAUTHORIZED=0
 
-# The api client auth must be in base64 : <cliend_id>:<client_secret>
-CLIENT_AUTH=
+# API client auth
+CLIENT_ID=
+CLIENT_SECRET=
