--- a/.env.example
+++ b/.env.example
@@ -5,5 +5,5 @@ NUXT_SESSION_PASSWORD=
 NODE_TLS_REJECT_UNAUTHORIZED=0
 
 # API client auth
-CLIENT_ID=
-CLIENT_SECRET=
+NUXT_PUBLIC_CLIENT_ID=
+NUXT_PUBLIC_CLIENT_SECRET=
