--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "vue-router": "^4.5.0"
   },
   "dependencies": {
-    "@iconify/json": "^2.2.302",
+    "@iconify-json/heroicons": "^1.2.2",
     "@pinia/nuxt": "^0.9.0",
     "@types/qs": "^6.9.18",
     "dayjs": "^1.11.13",
