Fix refresh token logout

--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,6 @@ NODE_TLS_REJECT_UNAUTHORIZED=0
 # API client auth
 NUXT_PUBLIC_CLIENT_ID=
 NUXT_PUBLIC_CLIENT_SECRET=
+
+NUXT_PUBLIC_BADGER_CLIENT_ID=
+NUXT_PUBLIC_BADGER_CLIENT_SECRET=
