--- a/package.json
+++ b/package.json
@@ -20,13 +20,13 @@
     "@nuxtjs/turnstile": "^0.9.16",
     "@pinia/nuxt": "^0.10.1",
     "@types/qs": "^6.9.18",
-    "@unhead/vue": "^2.0.0-rc.8",
+    "@unhead/vue": "^2.0.3",
     "chart.js": "^4.4.8",
     "dayjs": "^1.11.13",
     "jwt-decode": "^4.0.0",
     "mergician": "^2.0.2",
     "nuxt": "^3.16.2",
-    "nuxt-api-party": "^2.1.2",
+    "nuxt-api-party": "^2.2.2",
     "pinia": "^3.0.1",
     "pinia-plugin-persistedstate": "^4.2.0",
     "qs": "^6.14.0",
