--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "nuxt-app",
+  "name": "narvik-front",
+  "version": "3.6.1",
   "private": true,
   "type": "module",
   "scripts": {
     "build": "nuxt build",
-    "dev": "nuxt dev",
+    "dev": "nuxt dev --https --ssl-cert localhost.pem --ssl-key localhost-key.pem",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
