--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@nuxt/ui": "^3.0.2",
     "@nuxtjs/turnstile": "^0.9.16",
     "@pinia/nuxt": "^0.10.1",
+    "@popperjs/core": "^2.11.8",
     "@types/qs": "^6.9.18",
     "@unhead/vue": "^2.0.3",
     "chart.js": "^4.4.8",
@@ -32,7 +33,7 @@
     "pinia-plugin-persistedstate": "^4.2.0",
     "qs": "^6.14.0",
     "uuid-encoder": "^1.2.0",
-    "v-calendar": "^2.4.2",
+    "v-calendar": "^3.1.2",
     "vue-chartjs": "^5.3.2",
     "vue-qrcode-reader": "^5.7.1"
   },
