--- a/.env.example
+++ b/.env.example
@@ -11,6 +11,13 @@ NUXT_PUBLIC_CLIENT_SECRET=
 NUXT_PUBLIC_BADGER_CLIENT_ID=
 NUXT_PUBLIC_BADGER_CLIENT_SECRET=
 
+# Local env with fixture
+#NUXT_PUBLIC_CLIENT_ID=test
+#NUXT_PUBLIC_CLIENT_SECRET=secretTestOnly
+#NUXT_PUBLIC_BADGER_CLIENT_ID=badger
+#NUXT_PUBLIC_BADGER_CLIENT_SECRET=secretTestOnly
+
+
 # OPTIONAL: Cloudflare turnstile captcha
 # The secret key will have to be defined in the backend
 #NUXT_PUBLIC_CLIENT_TURNSTILE=true
