--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,9 @@ NUXT_SESSION_PASSWORD=
 # Dev only
 NODE_TLS_REJECT_UNAUTHORIZED=0
 
+# Site url, used for sitemap tool
+NUXT_SITE_URL=
+
 # API client auth
 NUXT_PUBLIC_CLIENT_ID=
 NUXT_PUBLIC_CLIENT_SECRET=
