--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@nuxt/image": "1.10.0",
     "@nuxt/scripts": "0.11.5",
     "@nuxt/ui": "^3.0.2",
+    "@nuxtjs/seo": "3.0.3",
     "@nuxtjs/turnstile": "^1.0.0",
     "@pinia/nuxt": "^0.10.1",
     "@popperjs/core": "^2.11.8",
