Add umami tracking

--- a/.env.example
+++ b/.env.example
@@ -25,3 +25,8 @@ NUXT_PUBLIC_BADGER_CLIENT_SECRET=
 # The secret key will have to be defined in the backend
 #NUXT_PUBLIC_CLIENT_TURNSTILE=true
 #NUXT_PUBLIC_TURNSTILE_SITE_KEY=''
+
+# OPTIONAL: Umami tracking
+# NUXT_PUBLIC_UMAMI_ENABLED=false
+# NUXT_PUBLIC_UMAMI_SCRIPT=''
+# NUXT_PUBLIC_UMAMI_WEBSITE_ID=''
