--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "Narvik - Gestionnaire d'association",
+  "name": "Narvik - La gestion associative simplifiée",
   "short_name": "Narvik",
   "description": "Narvik est une plateforme en ligne permettant de simplifier la gestion d'une association",
   "theme_color": "#1c398e",
